--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.1",
+    "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
