--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.1",
+    "react-redux-form": "^1.16.12",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --hot",
+    "start": "webpack-dev-server --open --hot --port 4200",
     "build": "webpack --mode production"
   },
   "eslintConfig": {
