--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "formik": "^2.1.4",
     "history": "^4.9.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
@@ -11,14 +13,14 @@
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.1",
-    "react-redux-form": "^1.16.12",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "webpack-dev-server --open --hot --port 4200",
