--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
     "history": "^4.9.0",
+    "immer": "^6.0.1",
+    "jsonapi-serializer": "^3.6.6",
     "markdown": "^0.5.0",
     "moment": "^2.24.0",
+    "query-string": "^6.11.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.1",
