--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "yup": "^0.28.3"
   },
