--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "yup": "^0.28.3"
   },
   "scripts": {
