--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "query-string": "^6.11.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-facebook-login": "^4.1.1",
     "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
