--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
-    "history": "^4.9.0",
-    "immer": "^6.0.1",
+    "history": "^4.10.1",
+    "immer": "^6.0.9",
     "jsonapi-serializer": "^3.6.6",
     "markdown": "^0.5.0",
-    "moment": "^2.24.0",
-    "query-string": "^6.11.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "moment": "^2.27.0",
+    "query-string": "^6.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-helmet": "^5.2.1",
-    "react-js-pagination": "^3.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.1",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.5.0",
-    "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "yup": "^0.28.3"
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "webpack-dev-server --open --hot --port 4200",
@@ -46,22 +46,24 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
-    "eslint": "^7.0.0",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "sass": "^1.26.9",
+    "sass-loader": "^9.0.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
