--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
-    "formik": "^2.1.4",
+    "formik": "^2.1.5",
     "history": "^4.10.1",
     "immer": "^6.0.9",
     "jsonapi-serializer": "^3.6.6",
@@ -23,7 +23,9 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "react-select": "^3.1.0",
     "react-toastify": "^5.5.0",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
     "redux-logger": "^3.0.6",
@@ -55,14 +57,21 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
-    "eslint": "^7.4.0",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-redux-saga": "^1.1.3",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "sass": "^1.26.9",
-    "sass-loader": "^9.0.1",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "style-loader": "^0.23.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
