--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,13 @@
   },
 
   "parser": "babel-eslint",
-
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "prettier/prettier": "error"
   }
