--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-redux-saga": "^1.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "prettier": "^2.0.5",
     "sass": "^1.26.10",
