--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "yup": "^0.28.5"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --hot --port 4200",
-    "build": "webpack --mode production --config=webpack.prod.config.js",
+    "start": "webpack-dev-server --open --config webpack/webpack.dev.js --hot --port 4200",
+    "build": "webpack --mode production --config webpack/webpack.prod.js",
     "prettier": "prettier --check **/*.js",
     "prettier:fix": "prettier --write **/*.js",
     "lint:fix": "eslint --ext .ts,.js,.jsx --ignore-path .gitignore ./src --fix",
@@ -61,6 +61,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.6.0",
@@ -80,6 +81,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   }
 }
