--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "client",
+  "name": "webpack-sample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aicdev/snowflakejs": "0.0.3",
-    "@fullcalendar/daygrid": "^5.4.0",
-    "@fullcalendar/interaction": "^5.4.0",
-    "@fullcalendar/react": "^5.4.0",
-    "@fullcalendar/timegrid": "^5.4.0",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/react": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "axios": "^0.18.1",
-    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "formik": "^2.1.5",
     "history": "^4.10.1",
@@ -17,9 +18,10 @@
     "jsonapi-serializer": "^3.6.6",
     "markdown": "^0.5.0",
     "moment": "^2.27.0",
+    "node-sass": "4.14.1",
     "query-string": "^6.13.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-calendar-api": "^1.2.1",
     "react-google-login": "^5.1.21",
@@ -29,7 +31,7 @@
     "react-redux": "^6.0.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "4.0.1",
     "react-select": "^3.1.0",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.5.1",
@@ -39,55 +41,33 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "source-map-explorer": "^2.5.1",
+    "web-vitals": "^0.2.4",
     "yup": "^0.28.5"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --hot --port 4200",
-    "build": "webpack --mode production --config=webpack.prod.config.js",
-    "prettier": "prettier --check **/*.js",
-    "prettier:fix": "prettier --write **/*.js",
-    "lint:fix": "eslint --ext .ts,.js,.jsx --ignore-path .gitignore ./src --fix",
-    "lint": "eslint --ext .ts,.js,.jsx --ignore-path .gitignore ./src"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^2.1.1",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-redux-saga": "^1.1.3",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
-    "path": "^0.12.7",
-    "prettier": "^2.0.5",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^0.23.1",
-    "svg-inline-loader": "^0.8.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
